--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,15 @@ body {
     background-color: black;
     padding-top: 107px;
     padding-bottom: 414px;
+    padding-left: 120px;
+    padding-right: 140px;
+    display: flex;
+    flex-direction: row;
+}
+
+.hero2__box {
+    display: flex;
+    flex-direction: column;
 }
 
 .hero2__text {
@@ -209,6 +218,7 @@ body {
 }
 
 .hero2__item {
+    font-size: 14px;
     margin-left: 60.5px;
     margin-right: 60.5px;
     margin-bottom: 53px;
@@ -242,7 +252,7 @@ body {
     display: flex;
     gap: 29px;
     align-items: center;
-    margin-top: -60px;
+    margin-top: 60px;
 }
 
 .hero2__arrow {
@@ -254,6 +264,10 @@ body {
 .hero2__dots {
     display: flex;
     gap: 18px;
+}
+
+.hero2__dots.active {
+    background-color: #fff;
 }
 
 .hero2__line {
@@ -273,6 +287,7 @@ body {
     background-color: rgba(255, 255, 255, 0.3);
     cursor: pointer;
 }
+
 
 a {
     text-decoration-line: none;
